Closed
Bug 1359480
Opened 8 years ago
Closed 8 years ago
Only allow headless on supported platforms
Categories
(Firefox :: Headless, defect)
Firefox
Headless
Tracking
()
RESOLVED
FIXED
Firefox 55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: bdahl, Assigned: bdahl)
References
Details
Attachments
(1 file)
|
975 bytes,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
There have been a few reports from people trying headless on MacOS and Windows which leads to crashes. I'm going to change Firefox to print an error message and not start if trying to use the headless flag on non-linux platforms.
| Assignee | ||
Comment 1•8 years ago
|
||
Avoids crashes and lets users know if they try headless
on an unsupported platform.
Attachment #8861505 -
Flags: review?(jmuizelaar)
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → bdahl
Updated•8 years ago
|
Attachment #8861505 -
Flags: review?(jmuizelaar) → review+
Pushed by bdahl@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ceb0bbc23584
Only allow headless on supported platforms.
Comment 3•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
| Assignee | ||
Updated•8 years ago
|
Component: General → Headless
You need to log in
before you can comment on or make changes to this bug.
Description
•