Bug 1359480 - Only allow headless on supported platforms.

Avoids crashes and lets users know if they try headless
on an unsupported platform.