toolkit/xre/nsAppRunner.cpp
@@ -3136,7 +3136,12 @@ XREMain::XRE_mainInit(bool* aExitFlag)
   }
 
   if (gfxPlatform::IsHeadless()) {
+#ifdef XP_LINUX
     Output(false, "*** You are running in headless mode.\n");
+#else
+    Output(true, "Error: headless mode is not currently supported on this platform.\n");
+    return 1;
+#endif
   }
 
   nsresult rv;
